--- a/index.html
+++ b/index.html
@@ -1,12 +1,117 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+      <meta charset="utf-8">
+      <title>Welcome to Sedona</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+      <div class="conteiner">
+          <header class="main-menu">
+              <ul>      
+      	          <li>
+      	              Информация
+      	          </li>
+      	          <li>
+      	              Фото и видео
+      	          </li>   
+      	          <a href="#" class="menu-logo"></a>
+      	          <li>
+      	              Карта штата
+      	          </li>
+      	          <li>
+      	              Гостиницы
+      	          </li>
+      	      </ul>
+          </header>
+          <main>
+      	      <div class="logo">
+      		      <img src="#" alt="Welcome to the gorgeous Sedona">
+      	      </div>
+      	      <div class="intro common">
+      		      <h3>Седона-небольшой городок в Аризоне, заслуживающий большего!</h1>
+      		      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+      	      </div>
+      	      <section class="reason-1 common">
+      		      <h3 class="white-title">Настоящий городок</h3>
+      		      <p class="numbers">-№1-</p>
+      		      <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>
+      		      <img src="#" class="real-city" alt="Настоящий городок">
+      		      <div class="advantages">
+      			      <img src="#" alt="Жильё" class="house">
+      			      <h3>Жильё</h3>
+      			      <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+      		      </div>
+      		      <div class="advantages">
+      			      <img src="#" alt="Еда" class="food">
+      			      <h3>Еда</h3>
+      			      <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+      		      </div>
+      		      <div class="advantages">
+      			      <img src="#" alt="Сувениры" class="souvenirs">
+      			      <h3>Сувениры</h3>
+      			      <p>Не только китайского, но и местного производства!</p>
+      		      </div>
+      	      </section>
+      	      <section class="reason-2 common">
+      		      <img src="#" class="devils-bridge" alt="мост дьявола">
+      		      <h3 class="white-title">Там есть мост Дьявола</h3>
+      		      <p class="numbers">-№2-</p>
+      		      <p>Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
+      	      </section>
+      	      <section class="reason-345 common">
+      		      <div class="reason-3">
+      			      <h3>Небольшая площадь</h3>
+      			      <p class="numbers">-№3-</p>
+      			      <p>Все достопримечательности находятся очень близко</p>
+      		      </div>
+      		      <div class="reason-4">
+      			      <h3>Красивая дорога</h3>
+      			      <p class="numbers">-№4-</p>
+      			      <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      		      </div>
+      		      <div class="reason-5">
+      			      <h3>Мало туристов</h3>
+      			      <p class="numbers">-№5-</p>
+      			      <p>Большинство едет в Гранд-Каньон и толпится там</p>
+      		      </div>
+      	      </section>
+      	      <section class="search">
+      		      <h2>Заинтересовались?</h2>
+      		      <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      			  <a href="#" class="search">Поиск гостиницы в Седоне</a>
+      			  <form>
+                      <label>Дата заезда
+                          <input type="text" name="date-on" value="24 апреля 2016">
+                      </label>
+                      <label>Дата выезда
+                          <input type="text" name="date-off" value="4 июля 2016">
+                      </label>
+                      <label>Взрослые
+                          <input type="text" name="value" value="2">
+                      </label>
+                      <a href=""></a>
+                      <label>Дети
+                          <input type="text" name="value" value="0">
+                      </label>
+                      <input type="submit" name="Найти" value="Найти" class="btn">
+                  </form>
+      	      </section>
+          </main>
+          <footer class="main-footer">
+              <img src="#" class="map">         
+              <div class="footer-info">
+                  <a href="#">#VISITSEDONIA</a>
+              </div>
+              <div class="footer-social">
+                  <a class="social-btn social-btn-twtt" href="#">Twitter</a> 
+          	      <a class="social-btn social-btn-fb" href="#">Facebook</a>
+          	      <a class="social-btn social-btn-youtube" href="#">YouTube</a>
+              </div> 
+              <div class="footer-copyright">
+          	      <p>Website by</p>
+          	      <a href="#" class="copyright-btn">HTML academy</a>
+              </div>     	
+          </footer>
+     </div> 
   </body>
-</html>
+</html>  
