изменения в разметке, создан css и img

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
       <meta charset="utf-8">
       <title>Welcome to Sedona</title>
+      <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
       <div class="conteiner">
@@ -13,8 +14,8 @@
       	          </li>
       	          <li>
       	              Фото и видео
-      	          </li>   
-      	          <a href="#" class="menu-logo"></a>
+      	          </li> 
+                  <a href="#"  class="menu-logo"><img src="img/Group 1.png" alt="logo"></a>  
       	          <li>
       	              Карта штата
       	          </li>
@@ -25,40 +26,40 @@
           </header>
           <main>
       	      <div class="logo">
-      		      <img src="#" alt="Welcome to the gorgeous Sedona">
+      		      <img src="img/Group 2.png" alt="Welcome to the gorgeous Sedona">
       	      </div>
-      	      <div class="intro common">
+      	      <div class="intro">
       		      <h3>Седона-небольшой городок в Аризоне, заслуживающий большего!</h1>
       		      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
       	      </div>
-      	      <section class="reason-1 common">
-      		      <h3 class="white-title">Настоящий городок</h3>
-      		      <p class="numbers">-№1-</p>
-      		      <p>Седона-не аттракцион для туристов, там течет своя жизнь</p>
-      		      <img src="#" class="real-city" alt="Настоящий городок">
+      	      <section class="reason-1">
+      		      <h3 class="white">Настоящий городок</h3>
+      		      <p class="numbers" class="white">-№1-</p>
+      		      <p class="white">Седона-не аттракцион для туристов, там течет своя жизнь</p>
+      		      <img src="img/Layer 13.jpg" class="real-city" alt="Настоящий городок">
       		      <div class="advantages">
-      			      <img src="#" alt="Жильё" class="house">
+      			      <img src="img/Layer 12.png" alt="Жильё" class="house">
       			      <h3>Жильё</h3>
       			      <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
       		      </div>
       		      <div class="advantages">
-      			      <img src="#" alt="Еда" class="food">
+      			      <img src="img/Layer 13.png" alt="Еда" class="food">
       			      <h3>Еда</h3>
       			      <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
       		      </div>
       		      <div class="advantages">
-      			      <img src="#" alt="Сувениры" class="souvenirs">
+      			      <img src="img/Layer 11.png" alt="Сувениры" class="souvenirs">
       			      <h3>Сувениры</h3>
       			      <p>Не только китайского, но и местного производства!</p>
       		      </div>
       	      </section>
-      	      <section class="reason-2 common">
-      		      <img src="#" class="devils-bridge" alt="мост дьявола">
-      		      <h3 class="white-title">Там есть мост Дьявола</h3>
-      		      <p class="numbers">-№2-</p>
-      		      <p>Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
+      	      <section class="reason-2">
+      		      <img src="img/Layer 14.jpg" class="devils-bridge" alt="мост дьявола">
+      		      <h3 class="white">Там есть мост Дьявола</h3>
+      		      <p class="numbers" class="white">-№2-</p>
+      		      <p class="white">Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
       	      </section>
-      	      <section class="reason-345 common">
+      	      <section class="reason-345">
       		      <div class="reason-3">
       			      <h3>Небольшая площадь</h3>
       			      <p class="numbers">-№3-</p>
@@ -78,7 +79,7 @@
       	      <section class="search">
       		      <h2>Заинтересовались?</h2>
       		      <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      			  <a href="#" class="search">Поиск гостиницы в Седоне</a>
+      			  <a href="#" class="search white">Поиск гостиницы в Седоне</a>
       			  <form>
                       <label>Дата заезда
                           <input type="text" name="date-on" value="24 апреля 2016">
@@ -87,29 +88,32 @@
                           <input type="text" name="date-off" value="4 июля 2016">
                       </label>
                       <label>Взрослые
+                      <button>+</button>
                           <input type="text" name="value" value="2">
                       </label>
-                      <a href=""></a>
+                      <button>-</button>
                       <label>Дети
+                      <button>+</button>
                           <input type="text" name="value" value="0">
                       </label>
-                      <input type="submit" name="Найти" value="Найти" class="btn">
+                      <button>-</button>
+                      <input type="submit" name="Найти" value="Найти" class="btn search-btn">
                   </form>
       	      </section>
           </main>
           <footer class="main-footer">
-              <img src="#" class="map">         
+              <img src="img/map.jpg" class="map"> 
               <div class="footer-info">
-                  <a href="#">#VISITSEDONIA</a>
+                  <a href="#" class="footer-link">#VISITSEDONIA</a>
               </div>
               <div class="footer-social">
-                  <a class="social-btn social-btn-twtt" href="#">Twitter</a> 
+                  <a class="social-btn social-btn-twtt" href="#">Twitter</a>
           	      <a class="social-btn social-btn-fb" href="#">Facebook</a>
           	      <a class="social-btn social-btn-youtube" href="#">YouTube</a>
               </div> 
               <div class="footer-copyright">
-          	      <p>Website by</p>
-          	      <a href="#" class="copyright-btn">HTML academy</a>
+          	      <p class="made-by">Website by</p>
+          	      <a href="#" class="copyright-btn"><img src="img/Слой 3.png"></a>
               </div>     	
           </footer>
      </div> 
