--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
       <meta charset="utf-8">
       <title>Searching resalts</title>
+      <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
       <div class="conteiner">
@@ -14,7 +15,7 @@
                   <li>
                       Фото и видео
                   </li>   
-                  <a href="#" class="menu-logo"></a>
+                  <a href="#" class="menu-logo"><img src="img/Group 1.png"></a>
                   <li>
                       Карта штата
                   </li>
@@ -24,56 +25,56 @@
               </ul>
           </header>
           <main>
-            <form class="filters">
+            <form class="filters white">
               <div class="filters-1">
                 <h4>Инфраструктура:</h4>
                 <label>
-                  <input type="checkbox" checked name="pool">
+                  <input type="checkbox" checked name="pool" class="choice">
                   Бассейн
                 </label>
                 <label>
-                  <input type="checkbox" name="parking">
+                  <input type="checkbox" name="parking" class="choice">
                   Парковка
                 </label>
                 <label>
-                  <input type="checkbox" name="wi-fi">
+                  <input type="checkbox" name="wi-fi" class="choice">
                   Wi-Fi
                 </label>
               </div>
               <div class="filters-2">
                 <h4>Тип жилья:</h4>
                 <label>
-                  <input type="checkbox" checked name="hotel">
+                  <input type="checkbox" checked name="hotel" class="choice">
                   Гостиница
                 </label>
                 <label>
-                  <input type="checkbox" checked name="motel">
+                  <input type="checkbox" checked name="motel" class="choice">
                   Мотель
                 </label>
                 <label>
-                  <input type="checkbox" checked name="apartaments">
+                  <input type="checkbox" checked name="apartaments" class="choice">
                   Апартаменты
                 </label>
               </div>
               <div class="filters-3">
                 <h4>Стоимость в сутки (р):</h4>
-                <input type="text" name="from" value="от 0">
-                <input type="text" name="to" value="до 3000">
-                <div class="runner"> 
+                <input type="text" name="from" value="от 0" class="choice white">
+                <input type="text" name="to" value="до 3000" class="choice white">
+                <div class="runner">
                   <a href="#" class="from"></a>
                 </div>
                 <div class="runner"> 
                   <a href="#" class="to"></a>
                 </div>
               </div>
-              <input type="submit" name="show" value="Показать">
+              <input type="submit" name="show" value="Показать" class="filter-btn btn">
             </form>
             <div class="found">
               <h3>Найдено:3</h3>
-              <ul>
+              <ul class="selection">
                 <li>Сортировка:</li>
                 <li class="link"><span>По цене</span></li>
-                <li class="link"><a href="#">По типу</a></li>
+                <li class="link><a href="#">По типу</a></li>
                 <li class="link"><a href="#">По рейтингу</a></li>
                 <li class="arrow"><a href="#">up</a></li>
                 <li class="arrow"><a href="#">down</a></li>
@@ -81,10 +82,10 @@
             </div>
             <div class="search-result">
               <div class="search-info">
-                <img src="#" class="preview">
+                <img src="img/21Layer.jpg" class="preview">
                 <h3>Amara Resort & Spa</h3>
                 <p>Гостиница</p>
-                <p>От 3500 р.</p>
+                <p>От 4000 р.</p>
                 <a href="#" class="btn-more">Подробнее</a>
                 <a href="#" class="btn-book">Забронировать</a>
               </div>
@@ -96,10 +97,10 @@
                 <p>Рейтинг:8,5</p>
               </div>
               <div class="search-info">
-                <img src="#" class="preview">
+                <img src="img/89Layer.jpg" class="preview">
                 <h3>Desert Quail Inn</h3>
                 <p>Мотель</p>
-                <p>От 2000 р.</p>
+                <p>От 3000 р.</p>
                 <a href="#" class="btn-more">Подробнее</a>
                 <a href="#" class="btn-book">Забронировать</a>
               </div>
@@ -109,10 +110,10 @@
                 <p>Рейтинг:8,9</p>
               </div>
               <div class="search-info">
-                <img src="#" class="preview">
+                <img src="img/22Layer.jpg" class="preview">
                 <h3>Villas at Poco Diablo</h3>
                 <p>Апартаменты</p>
-                <p>От 4000 р.</p>
+                <p>От 2000 р.</p>
                 <a href="#" class="btn-more">Подробнее</a>
                 <a href="#" class="btn-book">Забронировать</a>
               </div>
@@ -125,7 +126,6 @@
             </div>
           </main>
           <footer>
-            <img src="#" class="map">
            <div class="footer-info">
               <a href="#">#VISITSEDONIA</a>
            </div>
@@ -136,7 +136,7 @@
            </div> 
            <div class="footer-copyright">
               <p>Website by</p>
-              <a href="#" class="copyright-btn">HTML academy</a>
+              <a href="#" class="copyright-btn"><img src="img/Слой 3.png"></a>
            </div>
           </footer>
       </div>
